tests/semantic_errors/testcase08.c
// mismatch return type definition and declaration main function

string main(void);

int main(void){
    return 2;
}

